--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "sqlite3": "^5.1.6"
   }
 }
